--- a/my-website-files/home.html
+++ b/my-website-files/home.html
@@ -11,7 +11,7 @@
 
     <body>
         <nav class="navbar">
-            <div class="brand-title">Brand Name</div>
+            <div class="brand-title">Connor.net</div>
             <a href="#" class="toggle-button">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -20,31 +20,26 @@
             </a>
             <div class="navbar-links">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="./home.html">Home</a></li>
+                    <li><a href="./about.html">About</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </div>
 
         </nav>
 
-    <h1>Connor Rowe</h1>
+    <h1>Home</h1>
 
     <h2>
     Check out this cool video.
     <iframe width="560" height="315" src="https://www.youtube.com/embed/8mAITcNt710" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </h2>
 
-    <h3>The university I graduated from is <a href="https://illinoisstate.edu/">Illinois State University</a>.
+    <h3>The University I graduated from is <a href="https://illinoisstate.edu/">Illinois State University</a>.
     </h3>
-
-    <h4>Visit <a href="redirected.html"> this page</a> 
-        to see my other page. 
-
-    </h4> 
-    <h5>
-        Copyright (c) Connor Rowe
-    </h5>
+    
+    <h4>Copyright (c) Connor Rowe 2023
+    </h4>
 
     
     </body>
