--- a/my-website-files/redirected.html
+++ b/my-website-files/redirected.html
@@ -7,11 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    You have been redirected to my other page.
+    <h1>Redirected!
+    </h1>
 
-    <h4>Go back to the home page <a href="hello.html"> here</a>.</p>
+    <h2>You have been redirected to the redirect test page.
+    </h2>
 
-    </h4> 
+    <h3>Go back to the home page <a href="./home.html"> here</a>.</p>
+    </h3> 
+
+    <h4>Copyright (c) Connor Rowe 2023</h4>
 
 </body>
 </html>
