--- a/my-website-files/about.html
+++ b/my-website-files/about.html
@@ -4,11 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>About</title>
+
+    <style>
+h3 {
+    font-size: 0.8rem;
+    text-align: center;
+    margin-top: 50px;
+    color: #777;
+    font-style: italic;
+}
+    </style>
+
 </head>
 <body>
+
+    <nav class="navbar">
+        <div class="brand-title">Connor.net</div>
+        <a href="#" class="toggle-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+            <ul>
+                <li><a href="./home.html">Home</a></li>
+                <li><a href="./about.html">About</a></li>
+                <li><a href="./contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
    <h1> "About page" currently under construction. </h1>
-   <h2>Go <a href="./home.html"> home.</h2>
+   <h2>Go <a href="./home.html"> home. </a></h2>
+   
    <h3>Copyright (c) Connor Rowe 2023</h3>
    
 </body>
