--- a/my-website-files/about.html
+++ b/my-website-files/about.html
@@ -8,7 +8,7 @@
     <title>About</title>
 
     <style>
-h3 {
+h4 {
     font-size: 0.8rem;
     text-align: center;
     margin-top: 50px;
@@ -36,10 +36,11 @@ h3 {
         </div>
     </nav>
 
-   <h1> "About page" currently under construction. </h1>
-   <h2>Go <a href="./home.html"> home. </a></h2>
-   
-   <h3>Copyright (c) Connor Rowe 2023</h3>
+   <h1>About</h1>
+   <h2>This website's purpose is to serve as a blog so I can share my reviews, projects, tutorials, eBooks, and music.</h2> 
+   <h3>The development process or my website will take longer since I am writing a lot of the code from scratch. <br>
+    Currently, my website is scheduled to be hosted on GitHub Pages.<br>Hosting will need to change when I need to use server-side scripting like PHP for the contact form.</h3>
+   <h4>Copyright (c) Connor Rowe 2023</h4>
    
 </body>
 </html>
