--- a/my-website-files/contact.html
+++ b/my-website-files/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="contactPageStyles.css">
-    <title>Contact Form</title>
+    <title>Contact</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -38,7 +38,7 @@
 </div> 
 
     <div class="container">
-        <h2>Contact Form 📨</h2>
+        <h2>Contact Form 📨 (unavailable)</h2>
         <form class="contact-form">
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
