--- a/my-website-files/about.html
+++ b/my-website-files/about.html
@@ -39,7 +39,10 @@ h4 {
    <h1>About</h1>
    <h2>This website's purpose is to serve as a blog so I can share my reviews, projects, tutorials, eBooks, and music.</h2> 
    <h3>The development process or my website will take longer since I am writing a lot of the code from scratch. <br>
-    Currently, my website is scheduled to be hosted on GitHub Pages.<br>Hosting will need to change when I need to use server-side scripting like PHP for the contact form.</h3>
+    Currently, my website is scheduled to be hosted on GitHub Pages.<br>The website is currently being rebuilt using Python's <i>Flask</i> framework
+    <br>Stay tuned for new updates.<br>
+</h3>
+
    <h4>Copyright (c) Connor Rowe 2023</h4>
    
 </body>
